# pocket-vault

./: .gitignore  LICENSE  README.md  check_pypi.py  create_repo.py  pyproject.toml
src/: README.md
src/pocket/: auth.py  cli.py  git.py  vault.py
src/pocket_vault/: auth.py  cli.py  git.py  state.py  vault.py
src/prompt_vault/: auth.py  cli.py  search.py  vault.py
