[project]
name = "pocket-vault"
version = "0.1.0"
description = "A home for your most used prompts, synced across devices"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "DKeAlvaro" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/DKeAlvaro/pocket-vault"
Source = "https://github.com/DKeAlvaro/pocket-vault"
BugTracker = "https://github.com/DKeAlvaro/pocket-vault/issues"

[project.scripts]
pv = "pocket_vault.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
